# rtsoft_practice_1_2021

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: example.hpp
src/: floodfill.hpp  main.cpp  mapio.hpp  point.hpp  solve_multi.hpp  solve_single.hpp  table.hpp
